# smashrating

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
docs/: domain_model.mmd  workflow.mmd
resources/pgsql_vagrant/: Vagrantfile
resources/scripts/: calculate_elo.py  calculate_glicko.py  collect_data_smashgg.py  create_tables.py
smashrating/: __about__.py  __init__.py  config.py  db.py  elo.py  glicko.py  model.py
smashrating/alembic/: env.py
smashrating/collect/: smashgg.py  smashgg_queries.py  utils.py
tests/: test_glicko.py
